Replace deprecated and scheduled-for-removal API usages
Migrate off IntelliJ APIs flagged @Deprecated / scheduled for removal.
All replacements verified present across the supported range (plugin
since-build 252) via the plugin verifier against IU-252, 253 and 262
(verdict Compatible on all three):

- ServiceManager.getService(project, X) -> project.getService(X)
- com.google.common.base.Throwables.propagate(e) -> throw new RuntimeException(e)
- Query.iterator()/forEach(Consumer) -> .findAll() before iterating
- AlphaComparator.INSTANCE -> AlphaComparator.getInstance()
- Runtime.exec(String) -> Runtime.exec(String[])
- NameUtil.buildMatcher(p, MatchingCaseSensitivity.NONE) -> buildMatcher(p).build()
- TailType.SPACE -> TailTypes.spaceType()
- BaseScopeProcessor -> PsiScopeProcessor
- NotificationGroup(...) ctor -> NotificationGroupManager.getNotificationGroup(...)
  plus a <notificationGroup> registration in plugin.xml
- commons-lang SystemUtils.JAVA_VERSION_FLOAT -> commons-lang3 isJavaVersionAtLeast
- debugger: StackFrameDescriptorImpl(frame, tracker) -> (tracker, frame);
  BreakpointManager.applyThreadFilter(proc, threadRef) ->
  applyThreadFilter(proc, new RealThreadInfo(threadRef))

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>